--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "mongoose": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
