--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.0.2"
   },
